--- a/src/main/resources/templates/page/carr-deal-manage.html
+++ b/src/main/resources/templates/page/carr-deal-manage.html
@@ -823,7 +823,10 @@
     <script>
         var app = new Vue({
             el: "#app",
+            data:{},
+            methods:{
 
+            }
         })
     </script>
 </div>
