--- a/src/main/resources/templates/page/shop-employees.html
+++ b/src/main/resources/templates/page/shop-employees.html
@@ -270,8 +270,8 @@
                     <div class="tabToggleWrap">
                         <!-- Tab Menu -->
                         <ul class="tbMenuSub">
-                            <li class="on" data-target="pass"><a><span>비밀번호 재발급</span></a></li>
-                            <li data-target="perm"><a><span>레벨 권한 변경</span></a></li>
+                            <li class="on" data-target="pass"><a href="#;"><span>비밀번호 재발급</span></a></li>
+                            <li data-target="perm"><a href="#;"><span>회원 권한 변경</span></a></li>
                         </ul>
 
                         <div style="height: 20px;"></div>
@@ -291,14 +291,14 @@
                                     <tbody>
                                     <tr>
                                         <th>비밀번호 설정<span class="icoMust"><em>필수</em></span></th>
-                                        <td><input class="wPer" type="text" id="" placeholder="숫자 6자리 기입" value=""></td>
+                                        <td><input class="wPer" type="password" id="newPwdStr" placeholder="숫자 6자리 기입" v-mask="'######'" v-model="newPwdInfo.newPwdStr"></td>
                                         <td></td>
                                         <td></td>
                                     </tr>
                                     <tr>
                                         <th>비밀번호 확인<span class="icoMust"><em>필수</em></span></th>
-                                        <td><input class="wPer" type="text" id="" placeholder="위와 동일하게 기입" value=""></td>
-                                        <td></td>
+                                        <td><input class="wPer" type="password" id="newPwdChkInp" placeholder="위와 동일하게 기입" v-mask="'######'" @blur="modiEmpPwdChk"></td>
+                                        <td style="text-align: center;"><a href="#;" class="btnS colorRed" v-if="!newPwdInfo.newPwdChk && newPwdInfo.newPwdDirty"><span>불일치</span></a></td>
                                         <td></td>
                                     </tr>
                                     </tbody>
@@ -306,13 +306,13 @@
                             </div>
                             <!-- //content -->
                             <div class="btnWrapper">
-                                <a href="#" class="btnM colorSky"><span>비밀번호 수정</span></a>
+                                <a href="#;" class="btnM colorSky" @click="modiEmpPwd"><span>비밀번호 수정</span></a>
                             </div>
                         </div>
 
                         <!-- Tab2 -->
                         <div class="tbMenuSubContent" id="tab_perm">
-                            <h3 class="tts">레벨 권한 변경</h3>
+                            <h3 class="tts">회원 권한 변경</h3>
 
                             <!-- content -->
                             <div class="contentDetail">
@@ -327,10 +327,11 @@
                                     <tr>
                                         <th>회원 권한<span class="icoMust"><em>필수</em></span></th>
                                         <td>
-                                            <select id="">
-                                                <option value="">권한1</option>
-                                                <option value="">권한2</option>
-                                                <option value="">권한3</option>
+                                            <select id="newSellerPrms" v-model="newSellerPrmsInfo.sellerPrms">
+                                                <option value="ADMIN">관리자</option>
+                                                <option value="BOARD">글작성</option>
+                                                <option value="PRICE">가격설정</option>
+                                                <option value="READONLY">가격열람</option>
                                             </select>
                                         </td>
                                         <td></td>
@@ -341,7 +342,7 @@
                             </div>
                             <!-- //content -->
                             <div class="btnWrapper">
-                                <a href="#" class="btnM colorSky"><span>직원권한 수정</span></a>
+                                <a href="#;" class="btnM colorSky" @click="modiEmpPrms"><span>직원권한 수정</span></a>
                             </div>
                         </div>
                     </div>
@@ -402,12 +403,12 @@
                         <tr>
                             <th>초기 비밀번호 확인<span class="icoMust"><em>필수</em></span></th>
                             <td>
-                                <input class="wPer" type="password" id="pwdNoChk" placeholder="위와 동일하게 기입" v-mask="'######'" @blur="fnPwChk">
+                                <input class="wPer" type="password" id="pwdNoChk" placeholder="위와 동일하게 기입" v-mask="'######'" @blur="newEmpPwdChk">
                             </td>
                             <td style="text-align: center;"><a href="#;" class="btnS colorRed" v-if="!newEmpInfo.pwChk && newEmpInfo.pwDirty"><span>불일치</span></a></td>
                         </tr>
                         <tr>
-                            <th>레벨 권한<span class="icoMust"><em>필수</em></span></th>
+                            <th>회원 권한<span class="icoMust"><em>필수</em></span></th>
                             <td>
                                 <select class="wPer" id="sellerPrms" v-model="newEmpInfo.sellerPrms">
                                     <option value="ADMIN">관리자</option>
@@ -482,6 +483,14 @@
                 empList: [],
                 chkEmpList: [],
                 selEmp: -1,
+                newPwdInfo: {
+                    newPwdStr: '',
+                    newPwdChk: false,
+                    newPwdDirty: false
+                },
+                newSellerPrmsInfo: {
+                    sellerPrms: 'READONLY'
+                },
                 newEmpInfo: {
                     emailId: '',
                     emailDomain: '',
@@ -495,12 +504,17 @@
                 }
             },
             mounted: function(){
-                this.initSrchCond()
-                this.initSelEmpList()
-                this.getEmpList()
+                this.initPage()
             },
             watch: {},
             methods: {
+                initPage() {
+                    this.selEmp = -1
+                    this.checkAll = false
+                    this.initSelEmpList()
+                    this.initSrchCond()
+                    this.getEmpList()
+                },
                 initSrchCond() {
                     this.srchCond = {
                         srchOptn: 'ALL',
@@ -516,7 +530,7 @@
                         srchOptn: this.srchCond.srchOptn,
                         srchTerm: this.srchCond.srchTerm
                     }
-                    cf_call("/shop/getEmpList", param, this.getEmpListCB);
+                    cf_call("/shop/getEmpList", param, this.getEmpListCB)
                 },
                 getEmpListCB(rslt) {
                     var rsltList = rslt.empList
@@ -579,8 +593,11 @@
                     } else if (cf_isEmpty(this.empList[idx].authDt)) {
                         alert('미인증 직원의 정보수정은 불가합니다.')
                         this.selEmp = -1
+                    } else if (idx === this.selEmp) {
+                        this.selEmp = -1
                     } else {
                         this.selEmp = idx
+                        this.newSellerPrmsInfo.sellerPrms = this.empList[idx].sellerPrms
                     }
                 },
                 getTrClass(idx) {
@@ -622,18 +639,68 @@
                             bnMbrIdList: this.chkEmpList,
                             amdMbrId: this.bnMbrId
                         }
-                        cf_call("/shop/modiEmpDeact", param, this.modiEmpDeactCB);
+                        cf_call("/shop/modiEmpDeact", param, this.modiEmpDeactCB)
                     } else {
                         alert('퇴사로 처리 할 직원을 선택하세요.')
                     }
                 },
                 modiEmpDeactCB(rslt) {
-                    if(rslt.rsltStat === "SUCC") {
+                    if (rslt.rsltStat === "SUCC") {
                         alert("해당 직원이 퇴사 처리 되었습니다.")
-                        this.checkAll = false
-                        this.initSelEmpList()
-                        this.initSrchCond()
-                        this.getEmpList()
+                        this.initPage()
+                    }
+                },
+                modiEmpPwdChk($e) {
+                    this.newPwdInfo.newPwdDirty = true
+                    this.newPwdInfo.newPwdChk = this.newPwdInfo.newPwdStr === $e.target.value
+                },
+                modiEmpPwd() {
+                    if (this.selEmp === -1) {
+                        alert('정보수정 할 직원을 선택하세요.')
+                    } else if (this.newPwdInfo.newPwdStr === '') {
+                        alert('재발급 할 비밀번호를 입력하세요.')
+                    } else if (!this.newPwdInfo.newPwdChk) {
+                        alert('비밀번호 확인을 완료하세요.')
+                    } else {
+                        var param = {
+                            bnMbrId: this.empList[this.selEmp].bnMbrId,
+                            pwdNo: this.newPwdInfo.newPwdStr,
+                            amdMbrId: this.bnMbrId
+                        }
+                        cf_call("/shop/modiEmpPwd", param, this.modiEmpPwdCB)
+                    }
+                },
+                modiEmpPwdCB(rslt) {
+                    if (rslt.rsltStat === "SUCC") {
+                        alert("해당 직원의 비밀번호가 초기화 되었습니다.")
+                        this.newPwdInfo = {
+                            newPwdStr: '',
+                            newPwdChk: false,
+                            newPwdDirty: false
+                        }
+                        $('#newPwdChkInp')[0].value = ''
+                        this.initPage()
+                    }
+                },
+                modiEmpPrms() {
+                    if (this.selEmp === -1) {
+                        alert('정보수정 할 직원을 선택하세요.')
+                    } else if (this.newSellerPrmsInfo.sellerPrms === this.empList[this.selEmp].sellerPrms) {
+                        alert('해당 직원의 기존 권한 레벨과 동일합니다.')
+                    } else {
+                        var param = {
+                            bnMbrId: this.empList[this.selEmp].bnMbrId,
+                            sellerPrms: this.newSellerPrmsInfo.sellerPrms,
+                            amdMbrId: this.bnMbrId
+                        }
+                        cf_call("/shop/modiEmpPrms", param, this.modiEmpPrmsCB)
+                    }
+                },
+                modiEmpPrmsCB(rslt) {
+                    if (rslt.rsltStat === "SUCC") {
+                        alert("해당 직원의 권한이 변경되었습니다.")
+                        this.newSellerPrmsInfo.sellerPrms = 'READONLY'
+                        this.initPage()
                     }
                 },
                 addNewEmpInfo() {
@@ -657,21 +724,22 @@
                     }
                 },
                 addNewEmpInfoCB(rslt) {
-                    if(rslt.rsltStat === "SUCC") {
+                    if (rslt.rsltStat === "SUCC") {
                         alert("신규 직원이 추가되었습니다.")
 
                         this.newEmpInfo.idChk = false
                         this.newEmpInfo.emailId = ''
                         this.newEmpInfo.emailDomain = ''
                         $('#emailDomainSel')[0].value = ''
+                        this.newEmpInfo.pwdNo = ''
+                        $('#pwdNoChk')[0].value = ''
                         this.newEmpInfo.pwDirty = false
                         this.newEmpInfo.pwChk = false
                         this.newEmpInfo.sellerPrms = 'READONLY'
                         this.newEmpInfo.mbrNm = ''
 
                         $('#popLayerEmployeeAdd').popup('hide')
-                        this.initSrchCond()
-                        this.getEmpList()
+                        this.initPage()
                     }
                 },
                 chkMbrId() {
@@ -693,7 +761,7 @@
                         $('#emailDomainSel')[0].value = ''
                     }
                 },
-                fnPwChk($e) {
+                newEmpPwdChk($e) {
                     this.newEmpInfo.pwDirty = true
                     this.newEmpInfo.pwChk = this.newEmpInfo.pwdNo === $e.target.value
                 }
