핸드폰 기종 클릭시 - 사용중인 요금제 보여지기 - css용 클래스 추가 체크박스 로직 추가

--- a/src/main/resources/templates/page/carr-mntrt-manage.html
+++ b/src/main/resources/templates/page/carr-mntrt-manage.html
@@ -200,6 +200,7 @@
 
                     if (this.allSelected) {
                         for (list in this.mntrtList) {
+                            console.log(list)
                             this.selectedMntNo.push(this.mntrtList[list].pnMntRtNo)
                         }
                     }
